# git-demo

./: breakout_week3.md  index.html
Breakout/src/: main.cpp
week 6/: CMakeLists.txt
week 6/config/: config.json  level_2.json  level_3.json
week 6/include/: Brick.h  Game.h  Game.h.bonus  Paddle.h  test_runner.h
week 6/src/: Ball.cpp  Game.cpp  Game.cpp.old  main.cpp
week11/: CMakeLists.txt  leaderboard.txt
week11/config/: config.json  level_1.json  level_2.json  level_3.json
week11/include/: Ball.h  BatchRenderer.h  Brick.h  Game.h  InterpolationManager.h  NetworkManager.h  Paddle.h  TextureCache.h  ThreadSafeQueue.h
week11/src/: Ball.cpp  Brick.cpp  Game.cpp  InterpolationManager.cpp  NetworkManager.cpp  Paddle.cpp  main.cpp
week4/: leaderboard.txt  test_brick_collision  test_window
week4/config/: config.json
week4/include/: Ball.h  Brick.h  Game.h  Paddle.h
week4/src/: Brick.cpp  Game.cpp  Paddle.cpp  main.cpp
week7/: .gitignore  breakout  leaderboard.json
week7/config/: level_1.json
week7/include/: Ball.h  GameState.h  PowerUp.h
week7/src/: Brick.cpp  Paddle.cpp  PowerUp.cpp
week7/tests/: test_brick_collision.cpp
week7（2）/include/: Game.h  NetworkProtocol.h  Paddle.h
week7（2）/src/: Game.cpp.backup  main.cpp
week7（2）/tests/: test_serialize.cpp
week8/: CMakeLists.txt
week8/config/: config.json  level_1.json  level_2.json  level_3.json
week8/include/: Ball.h  Brick.h  Game.h  GameState.h  InterpolationManager.h  NetworkManager.h  Paddle.h  PowerUp.h  TextureCache.h
week8/src/: Ball.cpp  Brick.cpp  Game.cpp  InterpolationManager.cpp  Paddle.cpp  PowerUp.cpp  main.cpp
做游戏/2026-03/: orbiting_sphere.cpp  开场第一课 介绍.pptx
做游戏/Game/: CMakeLists.txt  make.txt  项目结构.txt
做游戏/Game/docs/: 游戏开发项目说明书.md  项目结构.txt
做游戏/Game/include/: Common.h  M01_Core.h  M02_Input.h  M03_Physics.h  M04_PlayerState.h  M05_ShadowRecorder.h  M06_ShadowEntity.h  M07_MechanicLogic.h  M08_MechanicRender.h  M09_EnemyAI.h  M10_LevelLoader.h  M11_RenderBasic.h  M12_Animation.h  M13_Camera.h  M14_UI.h  M15_Audio.h
做游戏/Game/src/: M03_Physics.cpp  M04_PlayerState.cpp  M05_ShadowRecorder.cpp  M07_MechanicLogic.cpp  main.cpp
